remove top padding from .main-contents and put it to .section-area (since sticky header with anchor links on mobile doesnt anchor correctly without header offset

--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,6 @@ body a:focus,body a:hover {
 }
 
 .main-contents {
-  margin: 100px auto 0;
   overflow: hidden;
 }
 
@@ -451,9 +450,9 @@ body a:focus,body a:hover {
 }
 
 .section-area {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.35);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   margin: 0;
-  padding: 0;
+  padding: 80px 0;
 }
 
 .section-content {
