--- a/sass/layout/_global.scss
+++ b/sass/layout/_global.scss
@@ -33,7 +33,6 @@ body {
 .page-wrapper {}
 
 .main-contents {
-    margin: $site-header-height-mobile auto 0;
     overflow: hidden;
     @include breakpoint($medium-wide) {
         @include span(last 10 of 12 no-gutters);
