--- a/sass/modules/_03.sections.scss
+++ b/sass/modules/_03.sections.scss
@@ -1,8 +1,8 @@
 .section-area {
     @extend %clearfix;
-    border-bottom: 1px solid rgba($color-black, .35);
+    border-bottom: 1px solid rgba($color-black, .25);
     margin: 0;
-    padding: 0;
+    padding: $site-header-height-mobile/1.25 0;
     @include breakpoint($medium-tall) {
         font-size: 24px;
     }
